client/css/main.css
/* ... */
						main .data-source .visualization .tooltip .value {
							text-align: right;
							margin-left: 10px;
						}
			main .data-source .visualization.table #row-count {
				padding-left: 0;
				margin-top: calc(var(--gap) * 2);
				padding: 0;
				font-size: 90%;
				text-align: right;
			}
				main .data-source .visualization.table #row-count > span {
					margin-right: 15px;
				}
				main .data-source .visualization.table #row-count .label {
					color: #666;
					font-weight: normal;
					font-size: 100%;
					padding: 0;
					border-radius: 0;
					vertical-align: initial;
				}


			.visualization.table {
				overflow: auto;
			}
				.visualization.table table {
					caption-side: bottom;
				}
				.visualization.table thead tr.search {
					background: #fff;
				}
				.visualization.table thead tr.accumulation {
					background-color: #fff;
				}
				.visualization.table thead tr.accumulation th {
					top: 30px;
				}
				.visualization.table thead tr th.heading {
					top: 60px;
					background: var(--color-primary);
					color: var(--color-primary-text);
				}
				.visualization.table thead tr.search th,
				.visualization.table thead tr.accumulation th {
					background-color: #eee;
					padding: 0;
				}
				.visualization.table thead tr.search th:first-child,
				.visualization.table thead tr.accumulation th:first-child {
					border-left: 0;
				}
					.visualization.table thead tr th:first-child select {
						border-left: 0;
					}
					.visualization.table thead tr.search div,
					.visualization.table thead tr.accumulation div {
						display: flex;
						margin-bottom: 5px;
						background: #fff;
						align-items: initial;
					}
						.visualization.table thead tr.search select,
						.visualization.table thead tr.accumulation select {
							width: 90px;
							z-index: 1;
							margin-bottom: 0;
							border-right: 1px dashed #ccc;
							box-shadow: none;
						}
						.visualization.table thead tr.search input,
						.visualization.table thead tr.accumulation input {
							min-width: 100px;
							margin-bottom: 0;
							border: 0;
							box-shadow: none;
						}
						.visualization.table thead tr.search span,
						.visualization.table thead tr.accumulation span {
							flex: 1;
							color: #333;
							z-index: 1;
							font-weight: bold;
							padding: 4px 10px;
							margin: 0;
						}
				.visualization.table thead td {
					padding: 0;
					border: 0;
				}
					.visualization.table thead input,
					.visualization.table thead select {
						width: 100%;
						background-color: white;
						color: #333 !important;
						padding: 5px 8px;
						font-family: sans-serif;
						text-align: center;
						font-size: 12px;
						border-left: 1px solid #999;
						margin-bottom: 10px;
					}
					.visualization.table thead td:first-child input,
					.visualization.table thead td:first-child select {
						border-left: 0;
					}
				.visualization.table table thead th {
					text-transform: capitalize;
					position: sticky;
					background: var(--theme-dark);
					color: var(--theme-dark-text);
					cursor: pointer;
					white-space: nowrap;
					padding: 5px 10px;
					border: 0;
					top: 0;
				}
					.visualization.table table thead th div {
						display: flex;
						align-items: center;
					}
						.visualization.table table thead th span {
							flex: 1;
						}
						.visualization.table table thead th .fa {
							opacity: 0;
							transition: opacity var(--transition-duration);
						}
						.visualization.table table thead th:hover .fa {
							opacity: 1;
							margin-left: auto;
						}
			.visualization.table table tr.selected {
				background: #ddf;
				color: var(--theme-light-text);
			}
			.visualization.table table tbody tr.show-rows {
				color:  #666;
				font-size: 90%;
				background: #fff;
				border-top: 1px solid #bbb;
				cursor: pointer;
				transition: box-shadow var(--transition-duration),
							background var(--transition-duration);
			}
			.visualization.table table tbody tr.show-rows:hover {
				background: #ddd !important;
			}
			.visualization.table table tbody tr.show-rows:active {
				box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.15);
			}
				.visualization.table table tbody tr.show-rows td {
					text-align: center;
				}
				.visualization.table table tbody tr.show-rows span {
					margin: 0 15px;
				}

			.visualization.spatial-map .container {
				height: 500px;
			}
				.visualization.cohort table {
					width: 100%;
				}
					.visualization.cohort table td:first-child,
					.visualization.cohort table th:first-child {
						white-space: nowrap;
						min-width: 100px;
						border: 0;
					}
					.visualization.cohort table th.sticky,
					.visualization.cohort table td.sticky {
						position: sticky;
						left: 0;
						top: 0;
					}
					.visualization.cohort table th.sticky {
						z-index: 2;
						background: var(--color-primary);
					}
					.visualization.cohort table td.sticky {
						background: #fff;
					}
					.visualization.cohort table td.sticky:nth-child(2n) {
						background: #f1f1f9;
					}
					.visualization.cohort table .sticky:nth-child(2) {
						left: 100px;
					}
					.visualization.cohort th {
						white-space: nowrap;
					}
					.visualization.cohort td {
						text-align: center;
					}
					.visualization.cohort td.href {
						padding: 0;
					}
						.visualization.cohort td a {
							color: #333;
							display: block;
							padding: 8px 15px;
							transition: background var(--transition-duration),
										box-shadow var(--transition-duration);
						}
						.visualization.cohort td a:focus,
						.visualization.cohort td a:hover {
							background: rgba(0, 0, 0, 0.3);
							text-decoration: none;
						}
						.visualization.cohort td a:active {
							box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.4);
						}


.visualization .container > svg {
	width: 100%;
	height: 500px;
	display: flex;
}
/* ... */

